package com.example.demo.gameloop;

public enum GameLoopStatus {

    RUNNING, STOPPED

}
