package com.example.demo.gameloop;

public enum GameStatus {
    LOST, WON, DRAW, OPPONENT_TURN, MY_TURN, ERROR
}
