@startuml
'https://plantuml.com/class-diagram

abstract class GameLoop
class GameControllerForTTT
class ClientConnectionController
class Player
abstract class Board
class Stones
class TicTacToeGameLoop
class DesicionTree
class Settings
class SharedData
enum GameStatus
enum GameLoopStatus

TicTacToeGameLoop <|-- GameLoop
TicTacToeGameLoop <|--  ClientConnectionController
GameLoopStatus <. GameLoop
GameStatus <. GameLoop : > depends

TicTacToeGameLoop <|-- GameControllerForTTT

ClientConnectionController <|-- Settings
ClientConnectionController <|-- SharedData

Player - GameControllerForTTT
GameControllerForTTT <.. DesicionTree : > depends
GameControllerForTTT <.. Board : < extends
Board *-- Stones : needs >

abstract class GameLoop {
}

enum GameLoopStatus {
RUNNING
STOPPED
}

enum GameStatus {
LOST
WON
DRAW
OPPONENT_TURN
MY_TURN
ERROR
}
@enduml